<?xml version="1.0" encoding="utf-8"?>
<!--
/*
 * Author: Mahdi Moradi - 300951014
 * Final Project - CINEPLEX Ticket Service
 * Date: 18 April 2019
 *
 * /-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gen_background_grad"
    android:orientation="vertical"
    tools:context=".BookingInfoActivity">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbarBookingInfo"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:layout_scrollFlags="scroll|enterAlways"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />
    </android.support.design.widget.AppBarLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <GridLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:columnCount="3"
                android:rowCount="7">

                <TextView
                    android:id="@+id/bInfoMovieTitle"
                    android:layout_width="250dp"
                    android:layout_height="wrap_content"
                    android:layout_row="0"
                    android:layout_column="0"
                    android:layout_columnSpan="2"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="20dp"
                    android:textColor="@color/colorAccent"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/bInfoUserName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_row="0"
                    android:layout_column="2"
                    android:layout_marginStart="5dp"
                    android:layout_marginTop="20dp"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/theatreShowInfo"
                    android:layout_width="230dp"
                    android:layout_height="wrap_content"
                    android:layout_row="1"
                    android:layout_column="0"
                    android:layout_columnSpan="2"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="20dp"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/theatreCity"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_row="1"
                    android:layout_column="2"
                    android:layout_marginStart="5dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="5dp"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="250dp"
                    android:layout_height="wrap_content"
                    android:layout_row="2"
                    android:layout_column="0"
                    android:layout_columnSpan="3"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="20dp"
                    android:text="@string/bInfoChoose"
                    android:textSize="24sp"
                    android:textStyle="bold" />

                <!--ShowDate-->
                <RadioGroup
                    android:id="@+id/showDateGroup"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_row="3"
                    android:layout_column="0"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginEnd="20dp"
                    android:layout_marginBottom="15dp">

                    <RadioButton
                        android:id="@+id/rd1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:text="@string/d1"
                        android:textSize="24sp" />

                    <RadioButton
                        android:id="@+id/rd2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:text="@string/d2"
                        android:textSize="24sp" />

                    <RadioButton
                        android:id="@+id/rd3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:text="@string/d3"
                        android:textSize="24sp" />

                    <RadioButton
                        android:id="@+id/rd4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:text="@string/d4"
                        android:textSize="24sp" />

                    <RadioButton
                        android:id="@+id/rd5"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:layout_marginBottom="5dp"
                        android:text="@string/d5"
                        android:textSize="24sp" />
                </RadioGroup>

                <!--ShowTime -->
                <RadioGroup
                    android:id="@+id/showTimeGroup"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_row="3"
                    android:layout_column="1"
                    android:layout_columnSpan="2"
                    android:layout_marginStart="40dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginEnd="20dp"
                    android:layout_marginBottom="15dp">

                    <RadioButton
                        android:id="@+id/rb1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:text="@string/t1"
                        android:textSize="24sp" />

                    <RadioButton
                        android:id="@+id/rb2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:text="@string/t2"
                        android:textSize="24sp" />

                    <RadioButton
                        android:id="@+id/rb3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:text="@string/t3"
                        android:textSize="24sp" />

                    <RadioButton
                        android:id="@+id/rb4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:text="@string/t4"
                        android:textSize="24sp" />

                    <RadioButton
                        android:id="@+id/rb5"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:layout_marginBottom="5dp"
                        android:text="@string/t5"
                        android:textSize="24sp" />
                </RadioGroup>

                <!--Ticket number -->
                <LinearLayout
                    android:id="@+id/ticketInfoLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_row="4"
                    android:layout_column="0"
                    android:layout_columnSpan="3"
                    android:layout_marginStart="5dp"
                    android:layout_marginEnd="5dp"
                    android:background="@drawable/round_rect_grad"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_marginTop="20dp"
                        android:layout_marginBottom="10dp"
                        android:text="@string/bInfoNoOfTicket"
                        android:textSize="24sp"
                        android:textStyle="bold" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <CheckBox
                            android:id="@+id/cbAdult"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="15dp"
                            android:layout_marginTop="5dp"
                            android:padding="0dp"
                            android:text="@string/swAdult"
                            android:textSize="18sp"
                            tools:padding="0dp" />

                        <Spinner
                            android:id="@+id/spAdult"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:layout_marginStart="52dp" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <CheckBox
                            android:id="@+id/cbChild"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="15dp"
                            android:layout_marginTop="5dp"
                            android:text="@string/swChild"
                            android:textSize="18sp" />

                        <Spinner
                            android:id="@+id/spChild"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:layout_marginStart="48dp" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <CheckBox
                            android:id="@+id/cbSenior"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="15dp"
                            android:layout_marginTop="5dp"
                            android:layout_marginBottom="20dp"
                            android:text="@string/cbSeniors"
                            android:textSize="18sp" />

                        <Spinner
                            android:id="@+id/spSenior"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:layout_marginStart="45dp" />
                    </LinearLayout>
                </LinearLayout>

                <!--Payment Info -->
                <LinearLayout
                    android:id="@+id/paymentInfoLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_row="5"
                    android:layout_column="0"
                    android:layout_columnSpan="3"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="15dp"
                        android:layout_marginTop="20dp"
                        android:layout_marginBottom="10dp"
                        android:text="@string/payInfo"
                        android:textSize="24sp"
                        android:textStyle="bold" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/cardTypeLbl"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="15dp"
                            android:layout_marginTop="10dp"
                            android:layout_marginBottom="10dp"
                            android:text="@string/cardTypeLbl"
                            android:textColor="@color/navigationBarColor"
                            android:textSize="18sp" />

                        <Spinner
                            android:id="@+id/payMethod"
                            android:layout_width="220dp"
                            android:layout_height="40dp"
                            android:layout_marginStart="20dp"
                            android:layout_marginTop="5dp" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/cardNoLbl"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="15dp"
                            android:layout_marginTop="10dp"
                            android:text="@string/cardNoLbl"
                            android:textColor="@color/navigationBarColor"
                            android:textSize="18sp" />

                        <EditText
                            android:id="@+id/cardNo"
                            android:layout_width="match_parent"
                            android:layout_height="40dp"
                            android:layout_marginStart="15dp"
                            android:layout_marginTop="10dp"
                            android:layout_marginEnd="15dp"
                            android:layout_marginBottom="5dp"
                            android:background="@drawable/edit_text_background"
                            android:hint="@string/cardNoHint"
                            android:inputType="number"
                            android:paddingStart="5dp"
                            android:paddingEnd="5dp" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/ccvLbl"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="15dp"
                            android:layout_marginTop="10dp"
                            android:hint="@string/ccvHint"
                            android:text="@string/ccvLbl"
                            android:textColor="@color/navigationBarColor"
                            android:textSize="18sp" />

                        <EditText
                            android:id="@+id/ccv"
                            android:layout_width="100dp"
                            android:layout_height="40dp"
                            android:layout_marginStart="15dp"
                            android:layout_marginTop="10dp"
                            android:layout_marginBottom="5dp"
                            android:background="@drawable/edit_text_background"
                            android:inputType="number"
                            android:paddingStart="5dp"
                            android:paddingEnd="5dp" />
                    </LinearLayout>
                </LinearLayout>

                <Button
                    android:id="@+id/btnSubmitInfo"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_row="6"
                    android:layout_column="0"
                    android:layout_columnSpan="3"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="40dp"
                    android:layout_marginEnd="20dp"
                    android:layout_marginBottom="30dp"
                    android:background="@drawable/btn_bottom_right_round"
                    android:text="@string/btnSubmit"
                    android:textColor="@color/textColorPrimary"
                    android:textSize="24sp"
                    android:textStyle="bold" />
            </GridLayout>
        </ScrollView>
    </RelativeLayout>
</LinearLayout>