<?xml version="1.0" encoding="utf-8"?>
<!--
/*
 * Author: Mahdi Moradi - 300951014
 * Final Project - CINEPLEX Ticket Service
 * Date: 18 April 2019
 *
 * /-->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/relativeLayPro"
    android:layout_width="match_parent"
    android:layout_height="400dp"
    android:layout_marginStart="10dp"
    android:layout_marginEnd="10dp"
    android:background="@drawable/round_rect_grad">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="5dp"
        android:text="@string/changePassPopTitle"
        android:textSize="24sp"
        android:textStyle="bold" />

    <GridLayout
        android:id="@+id/grid1"
        android:layout_width="370dp"
        android:layout_height="290dp"
        android:layout_centerInParent="true"
        android:layout_marginStart="5dp"
        android:layout_marginTop="90dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="10dp"
        android:columnCount="2"
        android:orientation="vertical"
        android:rowCount="4">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="0"
            android:layout_column="0"
            android:layout_margin="5dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="10dp"
            android:text="@string/popUpCurrentPass"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/currentPassPopup"
            android:layout_width="175dp"
            android:layout_height="40dp"
            android:layout_row="0"
            android:layout_column="1"
            android:layout_gravity="end"
            android:layout_margin="5dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/edit_text_background"
            android:padding="5dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="1"
            android:layout_column="0"
            android:layout_margin="5dp"
            android:layout_marginStart="10dp"
            android:text="@string/popUpNewPass"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/newPassPopup"
            android:layout_width="175dp"
            android:layout_height="40dp"
            android:layout_row="1"
            android:layout_column="1"
            android:layout_gravity="end"
            android:layout_margin="5dp"
            android:background="@drawable/edit_text_background"
            android:inputType="textPassword"
            android:padding="5dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="2"
            android:layout_column="0"
            android:layout_margin="5dp"
            android:layout_marginStart="10dp"
            android:text="@string/popUpRepeatPass"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/repeatPassPopup"
            android:layout_width="175dp"
            android:layout_height="40dp"
            android:layout_row="2"
            android:layout_column="1"
            android:layout_gravity="end"
            android:layout_margin="5dp"
            android:background="@drawable/edit_text_background"
            android:inputType="textPassword"
            android:padding="5dp" />

        <Button
            android:id="@+id/btnPopupSave"
            android:layout_width="160dp"
            android:layout_height="50dp"
            android:layout_row="3"
            android:layout_column="0"
            android:layout_gravity="end"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="5dp"
            android:background="@drawable/btn_bottom_right_round"
            android:text="@string/btnSavePop"
            android:textColor="@color/textColorPrimary"
            android:textSize="24sp" />

        <Button
            android:id="@+id/btnPopupClose"
            android:layout_width="160dp"
            android:layout_height="50dp"
            android:layout_row="3"
            android:layout_column="1"
            android:layout_gravity="start"
            android:layout_marginStart="5dp"
            android:layout_marginTop="40dp"
            android:background="@drawable/btn_top_left_green"
            android:text="@string/btnClosePop"
            android:textColor="@color/textColorPrimary"
            android:textSize="24sp" />
    </GridLayout>

</RelativeLayout>