<?xml version="1.0" encoding="utf-8"?>
<!--
/*
 * Author: Mahdi Moradi - 300951014
 * Final Project - CINEPLEX Ticket Service
 * Date: 18 April 2019
 *
 * /-->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gen_background_grad"
    tools:context=".FragmentAdmin">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_alignStart="@+id/grid"
        android:layout_alignEnd="@+id/grid"
        android:layout_marginTop="50dp"
        android:src="@drawable/ciniplex" />


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/grid"
        android:layout_alignEnd="@+id/grid"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="280dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/round_rect_grad"
        android:text="@string/adminInfo"
        android:textSize="18sp" />

    <GridLayout
        android:id="@+id/grid"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerInParent="false"
        android:layout_marginStart="50dp"
        android:layout_marginTop="370dp"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="100dp"
        android:columnCount="2"
        android:orientation="vertical"
        android:rowCount="3">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="0"
            android:layout_column="0"
            android:layout_margin="5dp"
            android:layout_marginStart="10dp"
            android:text="@string/userName"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/adminUserName"
            android:layout_width="175dp"
            android:layout_height="50dp"
            android:layout_row="0"
            android:layout_column="1"
            android:layout_gravity="end"
            android:layout_margin="5dp"
            android:background="@drawable/edit_text_background"
            android:padding="5dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="1"
            android:layout_column="0"
            android:layout_margin="5dp"
            android:layout_marginStart="10dp"
            android:text="@string/password"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/adminPassword"
            android:layout_width="175dp"
            android:layout_height="50dp"
            android:layout_row="1"
            android:layout_column="1"
            android:layout_gravity="end"
            android:layout_margin="5dp"
            android:background="@drawable/edit_text_background"
            android:inputType="textPassword"
            android:padding="5dp" />

        <Button
            android:id="@+id/btnLoginAdmin"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_row="2"
            android:layout_column="0"
            android:layout_columnSpan="2"
            android:layout_marginTop="20dp"
            android:background="@drawable/btn_bottom_right_round"
            android:text="@string/btnLogin"
            android:textColor="@color/textColorPrimary"
            android:textSize="24sp" />
    </GridLayout>

</RelativeLayout>